design: fix z-index on Main

--- a/client/src/scss/common/_scroll_navi.scss
+++ b/client/src/scss/common/_scroll_navi.scss
@@ -3,7 +3,7 @@
 	top: 50%;
 	right: 30px;
 	transform: translateY(-50%);
-	z-index: 5;
+	z-index: 55;
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
