--- a/client/src/scss/main/_museum.scss
+++ b/client/src/scss/main/_museum.scss
@@ -37,6 +37,7 @@
 		img {
 			z-index: 1;
 			position: absolute;
+			z-index: 0;
 		}
 
 		.rightTxt {
@@ -55,7 +56,7 @@
 			writing-mode: vertical-rl;
 			white-space: pre-wrap;
 			word-spacing: 5px;
-			z-index: 55;
+			z-index: 30;
 		}
 	}
 
@@ -65,7 +66,7 @@
 		margin: 0 auto;
 		padding: 120px 15vw 96px;
 		position: absolute;
-		z-index: 99;
+		z-index: 5;
 	}
 
 	.swiper-container {
